# discordproxy

./: .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci-cd.yaml
discordproxy/: __init__.py  _api.py  _cli.py  _config.py  _decorators.py  _server.py  client.py  discord_api_pb2.py  discord_api_pb2_grpc.py  exceptions.py  server.py
discordproxy/tests/: fixtures.py  helpers.py  stubs.py  test_api.py  test_client.py  test_config.py  test_end2end.py  test_exceptions.py  test_helpers.py
docs/: conf.py  development.md  index.rst  operations.md  package.rst  protobufs.md  requirements.txt
docs/_static/css/: custom.css
examples/DiscordClient/: hello_world.py
examples/gRPC/: hello_world.py  load_test.py
tests/: test_cli.py
