[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "discordproxy"
dynamic = ["version", "description"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Erik Kalkoken", email = "erik.kalkoken@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["grpcio-tools>=1.81", "py-cord>=2.8", "protobuf>=6"]

[project.scripts]
discordproxymessage = "discordproxy._cli:main"
discordproxyserver = "discordproxy._server:main"

[project.urls]
Documentation = "https://django-eveuniverse.readthedocs.io/en/latest/"
Source = "https://github.com/AllianceAuth-Apps/discordproxy"
Tracker = "https://github.com/AllianceAuth-Apps/discordproxy/issues"

[tool.flit.module]
name = "discordproxy"

[tool.isort]
profile = "black"

[tool.pylint.'MASTER']
ignore-patterns = [
    "ignore-patterns=test_*.py,__init__.py,generate_*.py,discord_api_pb2*",
]
ignore-paths = ["^.*/tests/.*$"]

[tool.pylint.'BASIC']
good-names = ["i", "j", "k", "ex", "pk"]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = ["E0213", "E1101", "C0209"]
